<resources>
    <string name="app_name">MadLevel4Task2</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="welcome">Welcome</string>
    <string name="game_instructions">Instructions: select rock, paper or scissors to play.</string>
    <string name="statistic_title">Your all time statistics</string>
    <string name="statistic_score">Win: %d Draw: %d Lose: %d</string>
    <string name="you_win">You win!</string>
    <string name="you_lose">You lose!</string>
    <string name="vs">V.S.</string>
    <string name="computer">Computer</string>
    <string name="you">You</string>
    <string name="draw">DRAW</string>
    <string name="win">WIN</string>
    <string name="lose">LOSE</string>
    <string name="game_history">History</string>
    <string name="delete_all">Delete all</string>
    <string name="time">time</string>
</resources>