<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GameFragment">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textSize="26sp"
        tools:layout_editor_absoluteX="151dp"
        tools:layout_editor_absoluteY="16dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/game_instructions"
        tools:layout_editor_absoluteX="49dp"
        tools:layout_editor_absoluteY="63dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/statistic_title"
        tools:layout_editor_absoluteX="136dp"
        tools:layout_editor_absoluteY="121dp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/statistic_score"
        tools:layout_editor_absoluteX="132dp"
        tools:layout_editor_absoluteY="147dp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/you_win"
        android:textSize="20sp"
        tools:layout_editor_absoluteX="168dp"
        tools:layout_editor_absoluteY="252dp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/vs"
        android:textSize="40sp"
        tools:layout_editor_absoluteX="172dp"
        tools:layout_editor_absoluteY="339dp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="#FF002688"
        android:src="@drawable/paper"
        tools:layout_editor_absoluteX="38dp"
        tools:layout_editor_absoluteY="315dp" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="#FF002688"
        android:src="@drawable/paper"
        tools:layout_editor_absoluteX="272dp"
        tools:layout_editor_absoluteY="315dp" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/computer"
        tools:layout_editor_absoluteX="61dp"
        tools:layout_editor_absoluteY="435dp" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/you"
        tools:layout_editor_absoluteX="296dp"
        tools:layout_editor_absoluteY="435dp" />

    <ImageView
        android:id="@+id/ivRockClick"
        android:layout_width="120dp"
        android:layout_height="100dp"
        android:background="#002688"
        android:src="@drawable/rock"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="615dp" />

    <ImageView
        android:id="@+id/ivPaperClick"
        android:layout_width="120dp"
        android:layout_height="100dp"
        android:background="#FF002688"
        android:src="@drawable/paper"
        tools:layout_editor_absoluteX="145dp"
        tools:layout_editor_absoluteY="615dp" />

    <ImageView
        android:id="@+id/ivScissorClick"
        android:layout_width="120dp"
        android:layout_height="100dp"
        android:background="#FF002688"
        android:src="@drawable/scissors"
        tools:layout_editor_absoluteX="275dp"
        tools:layout_editor_absoluteY="615dp" />
</androidx.constraintlayout.widget.ConstraintLayout>